# make_lastz_chains

./: .clocignore  .gitignore  .gitmodules  CHANGES_nfcore_refactor.md  Changelog.md  Dockerfile  LICENSE  README.md  TODO.md  __temp_get_ucsc_tool.sh  constants.py  environment.yml  install_dependencies.py  install_dependencies__OLD.py  main.nf  make_chains.py  make_chains__OLD.py  nextflow.config  nextflow_schema.json  nf_watchdog.sh  params.json  pyproject.toml  requirements.txt  version.py
.claude/: settings.local.json
HL_kent_binaries/: NetFilterNonNested.perl  axtChain  chainAntiRepeat  chainExtractID.py  chainIndexID.py  chainNet  chainScore  chainSort  pslSortAcc  readme.txt  scoreChain.py
HL_scripts/: bundleChromSplitPslFiles.perl  chainGapFiller.py  generate_chrom_sizes.py  parallel_executor.py  pyCat.py  run_lastz.py  splitChain_into_randomParts.pl  splitChain_into_randomParts.py
HL_scripts__deprecated/: Globals.pm  readme.txt
__old/: blastz-run-ucsc
chainAxtIssue/: linux_output.txt
chain_clean_micro_env/: readme.txt
conf/: base.config  modules.config
doLastzChains/: HgAutomate.pm  HgRemoteScript.pm  HgStepManager.pm  doLastzChain.pl
modules/: common.py  common_funcs.py  error_classes.py  make_chains_logging.py  parameters.py  pipeline_steps.py  project_directory.py  project_paths.py  project_setup_procedures.py  step_executables.py  step_manager.py  step_status.py
old_backup/: Globals.pm  bundle_chrom_split_psl_files.perl  doLastzChain.pl  install_dependencies__OLD.py  make_chains__OLD.py  readme.txt
parallelization/: execute_joblist.nf  (+3 more)
(+67 files in other folders)
